puppet-forge/deployment.yaml
# Source: puppet-forge/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppet-forge-puppet-forge
  labels:
    app: puppet-forge
    chart: puppet-forge-0.1.10
    release: puppet-forge
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: puppet-forge
      release: puppet-forge
  template:
    metadata:
      labels:
        app: puppet-forge
        release: puppet-forge
    spec:
      containers:
        - name: puppet-forge
          image: "hickey/puppet_forge:1.10.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - mountPath: /puppet/modules
              name: puppet-forge-volume
              readOnly: false
          resources:
            limits:
              cpu: 200m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 16Mi
      volumes:
        - name: puppet-forge-volume
          persistentVolumeClaim:
            claimName: puppet-forge-claim
---
