puppet-forge/service.yaml
# Source: puppet-forge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppet-forge-puppet-forge
  labels:
    app: puppet-forge
    chart: puppet-forge-0.1.10
    release: puppet-forge
    heritage: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: puppet-forge
  selector:
    app: puppet-forge
    release: puppet-forge
---
